--- a/www/index.html
+++ b/www/index.html
@@ -7,10 +7,12 @@
     <script src="components/loader.js"></script>
     <link rel="stylesheet" href="components/loader.css">
     <link rel="stylesheet" href="css/style.css">
-    <script></script>
+    <script>
+      
+    </script>
 </head>
 <body>
 	<br />
-    This is a template for Monaca app.
+    This is a template for Monaca app123.
 </body>
 </html>
